started context menu, load/save
started context menu, load/save

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">hiufungk-SizeBook</string>
     <string name="add_button">Add</string>
     <string name="add_detail_name">Enter Details</string>
-    <string name="input_name">Enter name</string>
-    <string name="input_date">Enter date (yyyy-mm-dd)</string>
-    <string name="input_neck">Enter neck size (inches)</string>
-    <string name="input_bust">Enter bust size (inches)</string>
-    <string name="input_chest">Enter chest size (inches)</string>
-    <string name="input_waist">Enter waist size (inches)</string>
-    <string name="input_hip">Enter hip size (inches)</string>
-    <string name="input_inseam">Enter inseam size (inches)</string>
+    <string name="input_name">Name</string>
+    <string name="input_date">Date (yyyy-mm-dd)</string>
+    <string name="input_neck">Neck size (circumference in inches)</string>
+    <string name="input_bust">Bust size (circumference in inches)</string>
+    <string name="input_chest">Chest size (circumference in inches)</string>
+    <string name="input_waist">Waist size (circumference in inches)</string>
+    <string name="input_hip">Hip size (circumference in inches)</string>
+    <string name="input_inseam">Inseam size (length in inches)</string>
     <string name="input_comment">Comment</string>
     <string name="submit_button">Submit</string>
     <string name="delete_button">Delete</string>
